# backend/modules/Offer/swagger/RouteDefinition.yaml
@@ -125,11 +125,9 @@
           schema:
             type: object
             properties:
-              images:
-                type: array
-                items:
-                  type: string
-                  format: binary
+              image:
+                type: string
+                format: binary
     responses:
       "200":
         description: List of offers retrieved successfully
